# electrify_gb

./: .pre-commit-config.yaml  README.md  api.py  client.py  pyproject.toml  requirements-dev.txt
config/: __init__.py
prompts/: pattern_analysis.jinja2  title_generation.jinja2
scripts/: install_and_activate_uv.sh  run_fastapi_endpoint.sh
src/: graph.py  prompt_manager.py  state.py  utils.py
src/agents/: __init__.py  data_retriever.py  pattern_extractor.py  performance_analyser.py  responder.py  title_generator.py
