[project]
name = "electrify-gb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "langchain-anthropic>=0.3.22",
    "langgraph>=0.6.11",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "uvicorn>=0.39.0",
]
