[project]
name = "electrify-gb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "jinja2>=3.1.6",
    "langchain-anthropic>=0.3.22",
    "langgraph>=0.6.11",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "uvicorn>=0.39.0",
]
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
[flake8]
max-line-length = 100
extend-ignore = E203, W503, E501
exclude =
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    build,
    dist
per-file-ignores =
    __init__.py:F401